# napari-pysero

./: LICENSE  README.md  mkdocs.yml  np-gui-notebook.ipynb  setup.cfg  shapez.npy  test_napari.py  tox.ini  wells2image.txt  wells2image7.txt
docs/: index.md
napari_pysero/: shapez.npy
napari_pysero/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
