[metadata]
name = napari-pysero
version = 0.0.1
author = Lena Blackmon
author_email = lena.blackmon@czbiohub.org
license = BSD-3
url = https://github.com/lenafb/napari-pysero
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/lenafb/napari-pysero/issues
    Documentation = https://github.com/lenafb/napari-pysero#README.md
    Source Code = https://github.com/lenafb/napari-pysero
    User Support = https://github.com/lenafb/napari-pysero/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-pysero = napari_pysero
